# teoriagrafos

./: .gitignore  CMakeLists.txt  ExactAlgorithm.cpp  ExactAlgorithm.h  Exato.cpp  Exato.h  GA.cpp  GA.h  Gerar_testes.ipynb  HeuristicAlgorithm.cpp  HeuristicAlgorithm.h  PreProcessing.cpp  PreProcessing.h  Principal.cpp  Principal.h  Processing.cpp  Util.cpp  Util.h  a.out  main.cpp  r1.in  r2.in  r3.in
benchmark_jsons/: Untitled.ipynb  benchmark_exato_1.json  benchmark_exato_10.json  benchmark_exato_11.json  benchmark_exato_12.json  benchmark_exato_13.json  benchmark_exato_14.json  benchmark_exato_15.json  benchmark_exato_16.json  benchmark_exato_17.json  benchmark_exato_18.json  benchmark_exato_19.json  benchmark_exato_2.json  benchmark_exato_20.json  benchmark_exato_21.json  benchmark_exato_22.json  benchmark_exato_23.json  benchmark_exato_24.json  benchmark_exato_25.json  benchmark_exato_26.json  benchmark_exato_27.json  benchmark_exato_3.json  benchmark_exato_4.json  benchmark_exato_5.json  benchmark_exato_6.json  benchmark_exato_7.json  benchmark_exato_8.json  benchmark_exato_9.json  benchmark_ga_1.json  benchmark_ga_10.json  benchmark_ga_11.json  benchmark_ga_12.json  benchmark_ga_13.json  benchmark_ga_14.json  benchmark_ga_15.json  benchmark_ga_16.json  benchmark_ga_17.json  benchmark_ga_18.json  benchmark_ga_19.json  benchmark_ga_2.json  (+38 more)
graphs/: G1_.in  Untitled1.ipynb  graph_1.in  graph_10.in  graph_100.in  graph_101.in  graph_102.in  graph_103.in  graph_104.in  graph_105.in  graph_106.in  graph_107.in  graph_108.in  graph_109.in  graph_11.in  graph_110.in  (+112 more)
